--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
+    position: relative;
     padding: 30px 0;
-    background-color: $color-tangaroa;
+    background-color: $color-spruce;
     color: $color-default-white;
     font-size: 25px;
 }
@@ -16,20 +17,45 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+
+    @include vp-767 {
+        display: block;
+    }
 }
 
 .header__search {
     margin-right: 20px;
     margin: 0 0 20px 0;
+    position: relative;
+
+    @include vp-767 {
+        width: 100%;
+    }
 }
 
 .header__search input {
+    position: relative;
     padding: 0 15px;
     margin: 0 15px 0 0;
     height: 45px;
     border: none;
     font-size: 14px;
     width: 280px;
+
+    @include vp-767 {
+        width: 100%;
+        padding-right: 35px;
+    }
+}
+
+.header__search-btn {
+    @include vp-767 {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        color: $color-tangaroa;
+        transform: translateY(-50%);
+    }
 }
 
 .header__link {
