--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,4 +1,18 @@
 .nav {
+    transition: transform $trans-default;
+    @include vp-767 {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        transform: translateX(100%);
+    }
+}
+.nav.is-active {
+    transform: translateX(0);
 }
 
 .nav ul {
@@ -10,6 +24,17 @@
     padding: 0;
     border-top: 1px solid $color-default-white;
     border-bottom: 1px solid $color-default-white;
+    
+    @include vp-767 {
+        flex-direction: column;
+        align-items: start;
+        flex-wrap: nowrap;
+        background-color: $color-tangaroa;
+        height: 100%;
+        overflow-x: auto;
+        border: none;
+        padding: 50px 0 30px 30px;
+      }
 }
 
 .nav li {
