--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import "vendor/normalize";
 @import "vendor/fontello";
+@import "vendor/swiper";
 @import "variables";
 @import "mixins";
 @import "global/fonts";
@@ -14,8 +15,11 @@
 // ---------------------------------
 
 @import "blocks/page";
+@import "blocks/title";
 @import "blocks/header";
 @import "blocks/button";
 @import "blocks/nav";
+@import "blocks/toggle-btn";
+@import "blocks/main";
 
 // ---------------------------------
