--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,7 +19,8 @@ $color-tangaroa:                    #011c40;
 $color-tangaroa-alfa:               rgba(1, 28, 64, 0.7);
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
-$color-tangerine:                   #e59700;
+$color-tangerine:                   #e59700; 
+$color-spruce:                      #3d4b55 ;
 $background-overlay:                rgba(0, 43, 102, 0.5);
 
 // Gradient
