--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -3,4 +3,10 @@
     line-height: 1.2;
     margin: 0 0 50px 0;
     text-align: center;
+
+    @include vp-767 {
+        font-size: 28px;
+        line-height: 1.2;
+        margin: 0 0 30px 0;
+     }
 }
