--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,9 @@
 @import "blocks/button";
 @import "blocks/nav";
 @import "blocks/toggle-btn";
+@import "blocks/popular";
 @import "blocks/main";
+@import "blocks/category-card";
+@import "blocks/footer";
 
 // ---------------------------------
