--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,8 @@
 @import "blocks/popular";
 @import "blocks/main";
 @import "blocks/category-card";
+@import "blocks/social";
 @import "blocks/footer";
+@import "blocks/contact"
 
 // ---------------------------------
