--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,5 +33,6 @@
 @import "blocks/item-product";
 @import "blocks/product-gallery";
 @import "blocks/counter";
+@import "blocks/cart-popup";
 
 // ---------------------------------
