--- a/source/sass/blocks/product-gallery.scss
+++ b/source/sass/blocks/product-gallery.scss
@@ -1,22 +1,16 @@
 .product-gallery {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, minmax(250px, 320px));
     justify-items: center;
     gap: 20px;
 
-    @include vp-374 {
-        grid-template-rows: repeat(auto-fit, minmax(150px, 250px));
-    }
-}
-
-.product-gallery a {
-    width: 250px;
-    height: 300px;
-
     @include vp-1279 {
-        width: 100%;
-        height: 100%;
+        grid-template-columns: 1fr;
+    }
+
+    @include vp-1023 {
+        grid-template-columns: 1fr 1fr;
+        order: 2;
     }
 }
 
