--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "vendor/normalize";
 @import "vendor/fontello";
 @import "vendor/swiper";
-@import "vendor/baguetteBox.min.css";
+@import "vendor/baguetteBox.min";
 @import "vendor/custom-select";
 
 @import "variables";
@@ -34,5 +34,6 @@
 @import "blocks/product-gallery";
 @import "blocks/counter";
 @import "blocks/cart-popup";
+@import "blocks/link";
 
 // ---------------------------------
